# DSSC-Toolbox

./: .gitignore  README.md  SKILL.md  compare-TNO-TSG.md  justfile
DSSC_Tool_Learning/: DSSC_Toolbox_Research_Task_Plan.md  DSSC_Toolbox_Scenario.md
demo/: ARCHITECTURE.md  A_fiware_deployment_notes.md  README.md  config.py  consumer_client.py  data_exchange_demo.md  demo_real_cluster.py  provider_server.py  pyproject.toml  run_demo.py
demo/data/scenarios/DSSC_Minimal_Energy_Scenario/: VALIDATION_GUIDE.md
demo/data/scenarios/DSSC_Minimal_Energy_Scenario/gaia-x/: legal-participant.template.jsonld  service-offering.template.jsonld
demo/data/scenarios/DSSC_Minimal_Energy_Scenario/metadata/: data-product-valid.jsonld
demo/data/scenarios/DSSC_Minimal_Energy_Scenario/shapes/: building-energy-shapes.ttl
docs/: A_fiware_deployment_notes.md
wiki/: 1-xiang-mu-gai-shu.md  10-h2m-fu-wu-diao-yong-liu-cheng.md  11-m2m-fu-wu-diao-yong-liu-cheng.md  12-odrl-shou-quan-kuang-jia-apisix-opa-odrl-pap.md  13-tm-forum-open-apis-he-tong-guan-li-liu-cheng.md  14-dsp-yu-edc-ji-cheng-jia-gou.md  15-catalog-he-tong-xie-shang-chuan-shu-liu-cheng-xie-yi.md  16-values-yaml-quan-ju-pei-zhi-can-kao.md  17-keycloak-yu-oid4vci-ping-zheng-qian-fa-pei-zhi.md  18-shu-zi-qian-bao-jian-rong-xing-yu-ji-cheng.md  19-secret-guan-li-yu-sheng-chan-huan-jing-an-quan.md  2-kuai-su-bu-shu-zhi-nan.md  20-gaia-x-xin-ren-kuang-jia-ji-cheng.md  21-marketplace-portal-bae-ji-cheng.md  22-central-marketplace-ji-cheng.md  23-aws-garnet-kuang-jia-ji-cheng.md  24-opentelemetry-fen-bu-shi-zhui-zong-jia-gou.md  (+16 more)
(+48 files in other folders)
