[project]
name = "dssc-dataflow-demo"
version = "0.2.0"
description = "FIWARE DSC Data Exchange Flow Demo - Mock + Real Cluster 端到端演示"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.28.0",
    "pyjwt>=2.10.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.0",
]

[project.scripts]
demo = "run_demo:main"
demo-cluster = "demo_real_cluster:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
